--- a/task14/src/main/resources/templates/products.html
+++ b/task14/src/main/resources/templates/products.html
@@ -36,30 +36,16 @@
     </table>
     <span th:text="${'Всего товаров ' + products.size()}"/>
     <br>
-    <form th:action="@{/products/add}"
-          th:object="${product}" method="post" class="form-horizontal">
 
-        <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input th:field="*{id}" placeholder="id (*)" class="form-control"/>
+    <form th:action="@{'/products/add1/'}">
+    <div style="margin-top: 10px" class="form-group">
+        <div class="col-sm-6 controls">
+            <button class="btn btn-primary">Add</button>
         </div>
-
-        <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input th:field="*{title}" placeholder="title (*)" class="form-control"/>
-        </div>
-
-        <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input th:field="*{price}" placeholder="price (*)" class="form-control"/>
-        </div>
-
-        <div style="margin-top: 10px" class="form-group">
-            <div class="col-sm-6 controls">
-                <button type="submit" class="btn btn-primary">Add</button>
-            </div>
-        </div>
+    </div>
     </form>
+
+
 </div>
 
 </body>
